# FinRisk-Agent-Studio

./: .env.example  .env.neo4j.example  .gitignore  README.md  README_CN.md  docker-compose.yml  main.py  pyproject.toml  tool_comparison_report_20260322_224919.html  tool_comparison_report_20260322_224919.md  tool_comparison_report_20260322_225049.html  tool_comparison_report_20260322_225049.md  tool_comparison_report_20260322_231021.html  tool_comparison_report_20260322_231021.md  tool_comparison_report_20260322_231808.html  tool_comparison_report_20260322_231808.md
.github/workflows/: ci.yml
docs/: agent-workflow.md  architecture-roadmap-cn.md  demo-script.md  docker-image-pinning.md  notes.md  sglang_native_reference.py
docs/implementation-plan/: 00-overview.md  01-shared-schemas-and-config.md  02-edgar-hf-streaming-loader.md  03-sec-api-and-filing-fetcher.md  04-transcript-ingestion.md  05-search-router-and-web-cache.md  06-llm-agent-runtime.md  07-extraction-pipelines.md  08-neo4j-supply-chain-graph.md  09-risk-sentiment-policy-geo.md  10-opportunity-discovery-and-reporting.md  11-evaluation-and-mvp-demo.md  12-stabilization-and-next-steps.md  13-production-execution-roadmap.md  14-current-progress-and-next-plan.md  15-finrisk-agent-studio-workflow-roadmap.md  16-quality-layer-and-graph-reasoning-roadmap.md  17-code-audit-remediation-plan.md  18-product-supply-chain-sankey-roadmap.md  19-evidence-first-context-guardrail-layer.md  20-llm-driven-tool-calling-agent-loop.md  21-llm-driven-agent-system-closure-roadmap.md
docs/reports/: agent-system-gap-report-2026-06-27.md  code-audit-report-2026-06-26.md  live-agent-apple-supply-chain-trace.json  live-agent-run-apple-supply-chain-trace.json  local-llm-e2e-api-frontend-2026-06-27.md
docs/security/: known-limitations.md
eval/: golden_cases.json  run_eval.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: compare_tools.py  compare_tools_sample_batch.json  demo_analyze_company.py  demo_compare_tools.py  demo_exploration.py  demo_web_search.py  download_edgar_2020.py  middle_east_test_batch.json  v17_smoke.sh
src/: config.py
tests/: test_config.py
tools/: __init__.py  searxng.py  tavily.py  tier_detection.py
(+461 files in other folders)
