[project]
name = "FinText-LLM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "datasets>=4.6.0",
    "defeatbeta-api>=0.0.47",
    "duckdb>=1.1.0",
    "fastapi>=0.132.0",
    "lxml>=6.0.2",
    "neo4j>=5.0.0",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "pandas>=3.0.1",
    "playwright>=1.40.0",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scrapling>=0.4.2",
    "sentence-transformers>=3.0.0",
    "tenacity>=9.1.4",
    "trafilatura>=1.0.0",
    "uvicorn>=0.41.0",
    "yfinance>=0.2.40",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# 开启的规则集
# E, W: Pycodestyle (基本错误和警告)
# F: Pyflakes (逻辑错误)
# I: isort (导入排序)
# B: flake8-bugbear (潜在 bug)
# PL: Pylint (Pylint 的大部分规则！)
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "RUF", "PL"]


# Per Step 17 audit: defer complexity / magic-value rules for the
# v17 alignment gate. The CI gate is intentionally narrow: real
# errors (E, F, B, I, N) only. PLR0912/0913/0915 and PLR2004 are
# tracked but not blocking.
ignore = [
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "PLR2004",  # magic value
    "PLC0415",  # import not at top of file (intentional lazy imports)
    "B007",  # unused loop variable (false positive for some idioms)
    "RUF005",  # list concatenation anti-pattern
    "RUF006",  # asyncio.create_task return value
    "PLW0603",  # global statement (intentional in singleton setter)
    "UP042",  # str+Enum subclass; standard Pydantic 2 idiom
    "SIM108",  # use ternary operator (style preference; explicit if/else is fine)
    "N806",  # uppercase constants inside functions (e.g. DFS color codes)
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that require external services or network access",
]
asyncio_mode = "auto"
